--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "name": "standmeup-node",
   "version": "1.0.0",
   "description": "Node server for the Standmeup app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node -r dotenv/config server.js",
+    "dev": "npm-run-all --parallel start server",
+    "server": "node -r dotenv/config server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.6.0",
+    "npm-run-all": "^4.1.5"
+  },
+  "proxy": "http://localhost:3001"
 }
