--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r dotenv/config server.js",
+    "start": "nodemon -r dotenv/config ./server.js",
     "dev": "npm-run-all --parallel start server",
-    "server": "node -r dotenv/config server.js"
+    "server": "nodemon -r dotenv/config ./server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jwks-rsa": "^1.6.0",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.7",
     "npm-run-all": "^4.1.5"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
